# DynNav-Dynamic-Navigation-Rerouting-in-Unknown-Environments_ubuntu

./: .gitignore  .multi_sampling_based_planners.py.swp  CITATION.cff  CLAIMS_EVIDENCE.md  Human Preference–Aware Risk Navigation.md  Irreversibility-Aware Navigation Planning.md  Proposition_Irreversibility_vs_Risk_Weighting.md  README (1).md  README (3).md  README (6).md  README Irreversibility-Aware Navigation Planning.md  README Self-Healing Navigation & Language-Driven Safety.md  README.md  README_Attack_Aware_TF_IDS.md  README_TRUST_PREFERENCES.md  README_trust_navigation.md  ablation_results.csv  ablation_study.py  add_option_entropy_grouped.py  add_option_entropy_to_nbv_scores.py  analyze_phase_transition_tau.py  astar_learned_heuristic.py  cluster_waypoints.csv  connectivity_sweep.csv  continual_learning.py  coverage_clustering_from_csv.py  coverage_grid_with_uncertainty_vla.csv  drift_uncertainty_analysis.py  drift_uncertainty_net.pt  drift_uncertainty_summary_stats.csv  ekf_fusion.py  ekf_test_run.py  energy_connectivity_joint_sweep.csv  entropy_viz.py  ethical_layer.py  eval_ids_replay.py  final_cleanup_to_shared.sh  generate_report_md.py  heuristic_net.pt  ids_cost_shaping.py  (+46 more)
analysis/: analyze_phase_transition_ta1u.py  plot_ids_cost_shaping.py  plot_results.py  viz_3d_vo_trajectory.py  viz_coverage_replan_ig.py  viz_uncertainty_contours.py  viz_vo_quiver.py
core/: abstract_planner.py  learning_language_safety.py  ukf_fusion.py  (+3 more)
install/cybersecurity_ros2/share/cybersecurity_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
(+130 files in other folders)
