<?xml version="1.0"?>
<package format="3">
  <name>cybersecurity_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 cybersecurity nodes (attacker + IDS)</description>
  <maintainer email="panagiota@example.com">panagiota</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
